fix: open link in new tab

--- a/layouts/partials/home/home-social.html
+++ b/layouts/partials/home/home-social.html
@@ -1,4 +1,4 @@
-<a href="{{ .Params.nextEventLink }}" class="vg-home-social">
+<a href="{{ .Params.nextEventLink }}" target="_blank" class="vg-home-social">
   <div class="vg-home-social__header">{{ .Params.nextEventHeading }}</div>
 
   <div class="vg-home-social-content">
