--- a/layouts/partials/home/home-blog-link.html
+++ b/layouts/partials/home/home-blog-link.html
@@ -1,4 +1,4 @@
-<a href="{{ "/posts/" | relURL }}" class="vg-home-blog-link">
+<a href="{{ "posts/" | relURL }}" class="vg-home-blog-link">
   <span class="vg-home-blog-link__text">{{ .Site.Params.homeToBlogText | safeHTML }}</span>
 
   <div class="vg-home-blog-link__arrow">
