--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,14 +13,14 @@
 
 <!-- Favicon for all browsers -->
 <link rel="icon" href="/favicon.ico" sizes="any">
-<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon-64x64.png" sizes="64x64">
+<link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | relURL }}" sizes="32x32">
+<link rel="icon" type="image/png" href="{{ "favicon-64x64.png" | relURL }}" sizes="64x64">
 
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" href="/apple-touch-favicon.png">
+<link rel="apple-touch-icon" href="{{ "apple-touch-favicon.png" | relURL }}">
 
 <!-- Manifest for PWA -->
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
 
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
