--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -15,7 +15,7 @@
       {{ range .Pages }}
       <a href="{{ .RelPermalink }}" class="vg-categories-list__item">
         {{ with .Resources.GetMatch "cover.png" }}
-        {{ $resized := .Resize "200x" }}
+        {{ $resized := .Fill "200x130" }}
         <img src="{{ $resized.RelPermalink }}" alt="{{ .Title }}" class="vg-categories-list__item-image" />
         {{ end }}
 
