--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,6 +151,7 @@ body.vg-sidebar-open {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
