fix: change rss

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,6 +27,8 @@
 
 {{ template "_internal/opengraph.html" . }}
 
+{{ with .Site.GetPage "section" "posts" }}
 {{ with .OutputFormats.Get "rss" -}}
 {{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+{{ end }}
 {{ end }}
