fix: change favicon

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
 <link href="https://iosevka-webfonts.github.io/iosevka/Iosevka.css" rel="stylesheet" />
 
 <!-- Favicon for all browsers -->
-<link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="icon" href="{{ "favicon.ico" | relURL }}">
 <link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | relURL }}" sizes="32x32">
 <link rel="icon" type="image/png" href="{{ "favicon-64x64.png" | relURL }}" sizes="64x64">
 
