--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="vg-sidebar__about">
-      {{ .Site.Params.sidebarDescription | safeHTML }}
+      {{ .Site.Params.description | safeHTML }}
     </div>
 
     <div class="vg-sidebar-tags">
