--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -714,11 +714,12 @@ body.vg-sidebar-open {
 .vg-home-social {
   display: block;
   width: 100%;
-  border: 1px solid var(--background-color-dark);
+  border: 1px solid var(--main-color);
   text-align: center;
 }
 
 .vg-home-social:hover {
+  border: 1px solid var(--background-color-dark);
   text-decoration: none;
 }
 
@@ -796,7 +797,7 @@ body.vg-sidebar-open {
 }
 
 .vg-home-blog-link:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background: var(--background-color-dark);
   text-decoration: none;
 }
 
