--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -673,6 +673,7 @@ body.vg-sidebar-open {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
   width: 100%;
 }
 
@@ -685,30 +686,16 @@ body.vg-sidebar-open {
   align-items: center;
 }
 
-.vg-home-center_top .vg-home-center__content {
-  width: 36%;
-  max-width: 480px;
-  margin-left: 28px;
-}
-
-.vg-home-center_top .vg-home-center__logo {
-  width: 60%;
-  max-width: 800px;
-}
-
+.vg-home-center_top .vg-home-center__content,
 .vg-home-center_bottom .vg-home-center__content {
-  width: 20%;
-  max-width: 260px; 
-  margin-right: 28px;
-}
-
-.vg-home-center_bottom .vg-home-center__logo {
-  max-width: 1040px;
+  flex: 1;
+  justify-content: center;
 }
 
 .vg-home-social {
   display: block;
-  width: 100%;
+  max-width: 480px;
+  min-width: 320px;
   border: 1px solid var(--main-color);
   text-align: center;
 }
