--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,6 @@ body.vg-sidebar-open {
 
 .vg-main {
   display: flex;
-  padding-bottom: 10px;
   box-sizing: border-box;
 }
 
@@ -491,7 +490,7 @@ body.vg-sidebar-open {
 .vg-footer .vg-social {
   display: none;
   align-items: end;
-  padding: 0 24px;
+  padding: 24px;
 }
 
 .vg-footer_home .vg-social {
@@ -700,6 +699,10 @@ body.vg-sidebar-open {
   justify-content: center;
 }
 
+.vg-home-center_single {
+  justify-content: center;
+}
+
 .vg-home-social {
   display: block;
   max-width: 480px;
@@ -886,10 +889,6 @@ body.vg-sidebar-open {
   .vg-home-center {
     justify-content: center;
   }
-
-  .vg-home-center .vg-home-center__logo {
-    display: none;
-  }  
 
   .vg-home-center_top .vg-home-center__content {
     width: 100%;
